--- a/templates/layouts/sidebar.html
+++ b/templates/layouts/sidebar.html
@@ -24,13 +24,14 @@
                         <i class="fa-solid fa-user"></i></i><span class="align-middle">Usuarios</span>
                     </a>
                 </li>
-                
+                {% endif %}
                 <li class="sidebar-item active">
                     <a class="sidebar-link" href="{% url 'news_view' %}">
                         <i class="fa-solid fa-newspaper"></i><span class="align-middle">Noticias</span>
                     </a>
                 </li>
-                
+
+                {% if user.is_superuser %}
                 <li class="sidebar-item active">
                     <a class="sidebar-link" href="{% url 'recognition_dashboard' %}">
                         <i class="fa-solid fa-award"></i><span class="align-middle">Reconocimientos</span>
