--- a/templates/authapp/home_user.html
+++ b/templates/authapp/home_user.html
@@ -23,28 +23,28 @@
   </div>
 
   <div class="row mb-4">
-    <div class="col-md-3">
+    <div class="col-md-3 mb-1">
       <div class="quick-access-card">
         <h6>Días de vacaciones disponibles</h6>
         <p>próximamente</p>
         <a  class="btn btn-success btn-sm">Ir →</a>
       </div>
     </div>
-    <div class="col-md-3">
+    <div class="col-md-3 mb-1">
       <div class="quick-access-card">
         <h6>Asistencia</h6>
         <p>próximamente</p>
         <a href="#" class="btn btn-success btn-sm">Ir →</a>
       </div>
     </div>
-    <div class="col-md-3">
+    <div class="col-md-3 mb-1">
       <div class="quick-access-card">
         <h6>Cursos activos</h6>
         <h2>{{in_progress_courses_count}}</h2>
         <a href="{% url 'course_wizard' %}" class="btn btn-success btn-sm">Ir →</a>
       </div>
     </div>
-    <div class="col-md-3">
+    <div class="col-md-3 mb-1">
       <div class="quick-access-card">
         <h6>Tus datos</h6>
         <p>próximamente</p>
