--- a/templates/news/user/news_view_user.html
+++ b/templates/news/user/news_view_user.html
@@ -32,6 +32,7 @@
 
       <div class="card-body">
         <h5 class="card-title line-clamp-2 mb-2">{{ n.title }}</h5>
+        <hr class="my-4">
 
         <div class="text-muted mb-3" style="font-size:.9rem;">
           🕒 Hace {{ n.published_at|timesince }}
