ya puede eliminar comentarios desde el admin

--- a/static/css/news.css
+++ b/static/css/news.css
@@ -85,3 +85,12 @@
   outline: none;                 /* o un borde sutil si prefieres */
   box-shadow: none;
 }
+
+.line-clamp-1 {
+  display: -webkit-box;
+  -webkit-line-clamp: 1;   
+  line-clamp: 1;        
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
+
