cards separadas en vista desde cel

--- a/templates/authapp/home.html
+++ b/templates/authapp/home.html
@@ -40,28 +40,28 @@
 
 <div class="background-wrapper p-4">
   <div class="row mb-4">
-    <div class="col-md-3">
+    <div class="col-md-3 mb-1">
       <div class="quick-access-card">
         <h6>Totál de colaboradores</h6>
         <p>próximamente</p>
         <a href="#" class="btn btn-success btn-sm">Ir →</a>
       </div>
     </div>
-    <div class="col-md-3">
+    <div class="col-md-3 mb-1">
       <div class="quick-access-card">
         <h6>Rotación anual</h6>
         <p>próximamente</p>
         <a href="#" class="btn btn-success btn-sm">Ir →</a>
       </div>
     </div>
-    <div class="col-md-3">
+    <div class="col-md-3 mb-1">
       <div class="quick-access-card">
         <h6>Antigüedad promedio</h6>
         <p>próximamente</p>
         <a href="#" class="btn btn-success btn-sm">Ir →</a>
       </div>
     </div>
-    <div class="col-md-3">
+    <div class="col-md-3 mb-1">
       <div class="quick-access-card">
         <h6>Ausentismos del mes</h6>
         <p>próximamente</p>
