--- a/templates/authapp/home.html
+++ b/templates/authapp/home.html
@@ -76,7 +76,7 @@
       <h5>Comunicados</h5>
       <div class="notification-card">
         <p><strong>Nombre de usuario</strong> | Hace 15 minutos</p>
-        <p>Estimado equipo,<br>En Recursos Humanos creemos que la evolución no es exclusiva de las especies...</p>
+        <p>Estimado equipo,<br>Descripción del comunicado.</p>
       </div>
       <!-- Puedes repetir más comunicados -->
     </div>
@@ -91,7 +91,4 @@
     </div>
   </div>
 </div>
-
-
-
 {% endblock %}
