separacion del modulo de reconocimientos

--- a/templates/onboarding/admin/onboarding_dashboard_admin.html
+++ b/templates/onboarding/admin/onboarding_dashboard_admin.html
@@ -4,5 +4,5 @@
 {% block title %}Panel de Onboarding{% endblock %}
 
 {% block content %}
-Aquí va a ir el onboarding.jhsdfsgs
+Aquí va a ir el onboarding.admin    
 {% endblock %}
