--- a/templates/recognitions/user/recognition_dashboard_user.html
+++ b/templates/recognitions/user/recognition_dashboard_user.html
@@ -4,5 +4,5 @@
 {% block title %}Panel de Reconocimientos{% endblock %}
 
 {% block content %}
-Aquí va a ir el panel de reconocimientos.
+Aquí va a ir el panel de reconocimientos.user
 {% endblock %}
