separacion de reconocimientos y surveys, creacion de js y css de ambos

--- a/templates/recognitions/admin/recognition_dashboard_admin.html
+++ b/templates/recognitions/admin/recognition_dashboard_admin.html
@@ -1,8 +1,15 @@
 {% extends 'layouts/base.html' %}
+{% load static %}
+{% block styles %}
+<link rel="stylesheet" href="{% static 'css/recognition.css' %}">
+{% endblock %}
 
 {% block page_title %}Panel de Reconocimientos{% endblock %}
 {% block title %}Panel de Reconocimientos{% endblock %}
 
 {% block content %}
 Aquí va a ir el panel de reconocimientos.admin
+{% endblock %}
+{% block scripts %}
+  <script src="{% static 'js/recognition.js' %}"></script>
 {% endblock %}
