--- a/templates/recognitions/user/recognition_dashboard_user.html
+++ b/templates/recognitions/user/recognition_dashboard_user.html
@@ -1,4 +1,8 @@
 {% extends 'layouts/base.html' %}
+{% load static %}
+{% block styles %}
+<link rel="stylesheet" href="{% static 'css/recognition.css' %}">
+{% endblock %}
 
 {% block page_title %}Panel de Reconocimientos{% endblock %}
 {% block title %}Panel de Reconocimientos{% endblock %}
@@ -6,3 +10,7 @@
 {% block content %}
 Aquí va a ir el panel de reconocimientos.user
 {% endblock %}
+{% block scripts %}
+  <script src="{% static 'js/recognition.js' %}"></script>
+{% endblock %}
+
