separecion de job_offers admin y user, creacion de css y js

--- a/templates/layouts/sidebar.html
+++ b/templates/layouts/sidebar.html
@@ -31,13 +31,13 @@
                         <i class="fa-solid fa-newspaper"></i><span class="align-middle">Noticias</span>
                     </a>
                 </li>
-                {% endif %}
 
                 <li class="sidebar-item active">
                     <a class="sidebar-link" href="{% url 'recognition_dashboard' %}">
                         <i class="fa-solid fa-award"></i><span class="align-middle">Reconocimientos</span>
                     </a>
                 </li>
+                {% endif %}
                 <li class="sidebar-item active">
                     <a class="sidebar-link" href="{% url 'request_form' %}">
                         <i class="fa-brands fa-wpforms"></i><span class="align-middle">Solicitud de constancias</span>
@@ -99,13 +99,16 @@
                         <i class="fa-solid fa-folder-open"></i><span class="align-middle">Mis documentos</span>
                     </a>
                 </li>
-                
+            {% endif %} 
+    
                 <li class="sidebar-item active">
                     <a class="sidebar-link" href="{% url 'job_offers_dashboard' %}">
                         <i class="fa-solid fa-briefcase"></i><span class="align-middle">Vacantes</span>
                     </a>
                 </li>
-                
+            
+            {% if user.is_superuser %}
+
                 <li class="sidebar-item active">
                     <a class="sidebar-link" href="{% url 'policies_dashboard' %}">
                         <i class="fa-solid fa-landmark"></i><span class="align-middle">Políticas internas</span>
