--- a/templates/recognitions/admin/recognition_category_create.html
+++ b/templates/recognitions/admin/recognition_category_create.html
@@ -71,13 +71,23 @@
           </div>
         </div>
 
-        <div class="mt-2 d-flex align-items-center gap-2">
-          <label for="coverInput" class="btn btn-link p-0">Cambiar imagen</label>
-          <input id="coverInput" type="file" name="cover_image" accept="image/*" class="d-none">
+        <div class="row g-3 mt-2">
+          <div class="col-6 d-flex align-items-center gap-2">
+            <label for="coverInput" class="btn btn-link p-0">Cambiar imagen</label>
+            <input id="coverInput" type="file" name="cover_image" accept="image/*" class="d-none">
+          </div>
+
+          <div class="col-6 d-flex align-items-center justify-content-end">
+            <div class="form-check">
+              <input class="form-check-input" type="checkbox" name="is_active"
+                    {% if object %}{% if object.is_active %}checked{% endif %}
+                    {% else %}checked{% endif %}>
+              <label class="form-check-label">Activo</label>
+            </div>
+          </div>
         </div>
       </div>
     </div>
-
     <div class="d-flex justify-content-end gap-3">
       <a href="{% url 'recognition_dashboard' %}" class="btn btn-light border">Cancelar</a>
       <button type="submit" class="btn btn-primary">Crear</button>
