--- a/templates/recognitions/admin/recognition_category_edit.html
+++ b/templates/recognitions/admin/recognition_category_edit.html
@@ -64,13 +64,6 @@
           </div>
         </div>
 
-        <div class="d-flex justify-content-between align-items-center mb-3">
-          <div class="form-check form-switch fs-5 m-0">
-            <input id="pointsSwitch" class="form-check-input" type="checkbox" name="show_points"
-                   {% if object and object.show_points %}checked{% endif %}>
-          </div>
-        </div>
-
         <div class="mb-2 fw-semibold">Previsualización</div>
 
         <div id="coverPreview" class="rounded-3 overflow-hidden border"
@@ -103,7 +96,7 @@
     </div>
     <div class="d-flex justify-content-end gap-3">
       <a href="{% url 'recognition_dashboard' %}" class="btn btn-light border">Cancelar</a>
-      <button type="submit" class="btn btn-primary">Crear</button>
+      <button type="submit" class="btn btn-primary">Actualizar</button>
     </div>
   </form>
 </div>
